--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:48:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&gt;&gt;bInvoke</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:02</td>   <td>7267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&gt;&gt;bInvoke</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:06</td>   <td>11331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&gt;&gt;bInvoke</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:09</td>   <td>14146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.email()[pri:3, instance:com.rogers.testparllel.TestParllel@71c3b41]">email</td> 
-  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:01</td>   <td>6044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.firstName()[pri:1, instance:com.rogers.testparllel.TestParllel@71c3b41]">firstName</td> 
-  <td>TestNG-test=Test-1@1828012346</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:05</td>   <td>10221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.lastName()[pri:2, instance:com.rogers.testparllel.TestParllel@71c3b41]">lastName</td> 
-  <td>TestNG-test=Test-2@1694847291</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:02</td>   <td>7068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:06</td>   <td>11159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
-<tr bgcolor="f09482">  <td>18/08/11 17:49:10</td>   <td>15279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@71c3b41]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-3@1775848528</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&gt;&gt;bInvoke</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:19</td>   <td>8371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&gt;&gt;bInvoke</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:23</td>   <td>12469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&gt;&gt;bInvoke</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:27</td>   <td>16553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestParllel.bInvoke(java.lang.String)[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&gt;&gt;bInvoke</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:26</td>   <td>15277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.email()[pri:3, instance:com.rogers.testparllel.TestParllel@236e3f4e]">email</td> 
+  <td>TestNG-test=Test-3@1302195721</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:18</td>   <td>6942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.firstName()[pri:1, instance:com.rogers.testparllel.TestParllel@236e3f4e]">firstName</td> 
+  <td>TestNG-test=Test-1@485573938</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:22</td>   <td>11316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.lastName()[pri:2, instance:com.rogers.testparllel.TestParllel@236e3f4e]">lastName</td> 
+  <td>TestNG-test=Test-2@1328273927</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:30</td>   <td>19569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParllel.pageTitle()[pri:4, instance:com.rogers.testparllel.TestParllel@236e3f4e]">pageTitle</td> 
+  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:19</td>   <td>8109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:23</td>   <td>12261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:27</td>   <td>16281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
+<tr bgcolor="f09482">  <td>18/08/11 18:14:30</td>   <td>19657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestParllel.tearDown()[pri:0, instance:com.rogers.testparllel.TestParllel@236e3f4e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-4@1210634138</td>   <td></td> </tr>
 </table>
